Added API authentication using Auth0

--- a/sampleapp1/appsettings.json
+++ b/sampleapp1/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+"AllowedHosts": "*",
+"Auth0": {
+  "Authority": "https://dev-o0puee4o.eu.auth0.com/",
+  "Audience": "https://localhost:7289"
+}
 }
