--- a/sampleapp1/sampleapp1.csproj
+++ b/sampleapp1/sampleapp1.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.4" />
   </ItemGroup>
 
